# gsd-ml

./: CLAUDE.md  README.md  package.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  01-VALIDATION.md
.planning/phases/02-core-workflow-tabular/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-VALIDATION.md
.planning/phases/03-intelligence-layer/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-dl-fine-tuning/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-supporting-skills/: 05-02-SUMMARY.md  05-VALIDATION.md
.planning/phases/06-polish-release/: 06-02-PLAN.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
commands/gsd-ml/: ml-clean.md  ml-diagnose.md  ml-resume.md  ml-status.md  ml.md
docs/plans/: 2026-03-23-documentation-fixes.md
gsd-ml/references/: metric-map.md
gsd-ml/templates/: train-dl-image.py  train-dl-text.py  train-ft.py  train-tabular.py
gsd-ml/workflows/: ml-clean.md  ml-diagnose.md  ml-resume.md  ml-run.md  ml-status.md
python/: pyproject.toml
python/src/gsd_ml/: __init__.py  checkpoint.py  diagnostics.py  drafts.py  export.py  guardrails.py  journal.py  profiler.py  results.py  retrospective.py  stagnation.py  state.py
python/src/gsd_ml/baselines/: __init__.py  deeplearning.py  finetuning.py  tabular.py
python/src/gsd_ml/prepare/: __init__.py  deeplearning.py  finetuning.py  tabular.py
python/tests/: conftest.py  test_baselines.py  test_checkpoint.py  test_diagnostics.py  test_drafts.py  test_export.py  test_guardrails.py  test_imports.py  test_journal.py  test_profiler.py  test_results.py  test_retrospective.py  test_stagnation.py  test_state.py  test_templates.py
(+19 files in other folders)
