[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsd-ml"
version = "0.1.0"
description = "Python ML utilities for gsd-ml — profiling, checkpointing, diagnostics, baselines, and state management"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Robert Lupo"}]
keywords = ["machine-learning", "claude-code", "autonomous-research", "ml-experiments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn>=1.5",
    "pandas>=2.0",
    "numpy>=2.0",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "pyarrow>=15.0",
]

[project.urls]
Homepage = "https://github.com/robertlupo1997/gsd-ml"
Repository = "https://github.com/robertlupo1997/gsd-ml"
Issues = "https://github.com/robertlupo1997/gsd-ml/issues"

[project.optional-dependencies]
dl = ["torch", "timm", "transformers"]
ft = ["torch", "peft", "trl", "transformers"]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/gsd_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
